:bug: fix display centered video on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -485,6 +485,7 @@ aside {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .media-modal .modal-content .media {
   height: 250px;
